cmake_minimum_required(VERSION 3.10.2)
project (gaana-dl)
set(CMAKE_BUILD_TYPE Debug)
add_subdirectory(fmt)
add_subdirectory(cpr)
add_subdirectory(md5)
include_directories(${CPR_INCLUDE_DIRS})
add_executable(gaana-dl main.cpp)
target_link_libraries(gaana-dl PRIVATE fmt::fmt-header-only md5 ${CPR_LIBRARIES})

